Initial the frontend blog app
